--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>TonimatasDEV</h1>
 
     <ul id="links">
+        <li><a href="https://wiki.tonimatas.dev">Wiki</a></li>
         <li><a href="https://github.com/TonimatasDEV">GitHub</a></li>
         <li><a href="https://hangar.papermc.io/TonimatasDEV">Hangar</a></li>
         <li><a href="https://modrinth.com/user/TonimatasDEV">Modrinth</a></li>
