Add Partners, add titles and move About Me

--- a/index.html
+++ b/index.html
@@ -25,19 +25,11 @@
     </ul>
 </div>
 
-<div id="information">
-    <div id="description">
-       <h1>About Me</h1>
-       <p>My name is Toni, I'm a Java programmer, I know how to use the Bukkit/Spigot/Paper library and a part of Forge, which allows me to create plugins and mods for minecraft. I also know how to create applications, and lately I'm also learning about Sockets in Java, to be able to create servers.</p>
-    </div>
-
-    <div id="logo">
-        <img src="images/logo.png" alt="">
-    </div>
-</div>
-
+<h1 id="firstSeparator">My Projects</h1>
 <div id="projects">
     <div class="column">
+        <h1 class="columnName">Mods (Forge)</h1>
+
         <a href="https://www.curseforge.com/minecraft/mc-mods/krystalcraft">
             <div class="project">
                 <h1>KrystalCraft</h1>
@@ -47,8 +39,33 @@
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/packet-size-doubler-forge">
             <div class="project">
-                <h1>Pacjet Size Doubler</h1>
+                <h1>Packet Size Doubler</h1>
                 <p>A simple mod for doubling the size of allowed packets</p>
+            </div>
+        </a>
+
+        <a href="https://www.curseforge.com/minecraft/mc-mods/potiontimestacker-forge">
+            <div class="project">
+                <h1>PotionTimeStacker</h1>
+                <p>Stack the time when drink the same potion.</p>
+            </div>
+        </a>
+    </div>
+
+    <div class="column">
+        <h1 class="columnName">Plugins</h1>
+
+        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/perworldplugins-updated">
+            <div class="project">
+                <h1>PerWorldPlugins</h1>
+                <p>PerWorldPlugins allows plugins to be set to hook onto certain worlds using the config.</p>
+            </div>
+        </a>
+
+        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/perworldcommandsplus">
+            <div class="project">
+                <h1>PerWorldCommands</h1>
+                <p>Put commands for certain worlds.</p>
             </div>
         </a>
 
@@ -59,29 +76,23 @@
             </div>
         </a>
     </div>
+</div>
 
-    <div class="column">
-        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/perworldplugins-updated">
-            <div class="project">
-                <h1>PerWorldPlugins</h1>
-                <p>PerWorldPlugins allows plugins to be set to hook onto certain worlds using the config.</p>
-            </div>
-        </a>
-
-        <a href="https://www.curseforge.com/minecraft/mc-mods/potiontimestacker-forge">
-            <div class="project">
-                <h1>PotionTimeStacker</h1>
-                <p>Stack the time when drink the same potion.</p>
-            </div>
-        </a>
-
-        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/perworldcommandsplus">
-            <div class="project">
-                <h1>PerWorldCommands</h1>
-                <p>Put commands for certain worlds.</p>
-            </div>
-        </a>
+<h1 class="separator">About Me</h1>
+<div id="information">
+    <div id="description">
+       <h1>Description</h1>
+       <p>My name is Toni, I'm a Java programmer, I know how to use the Bukkit/Spigot/Paper library and a part of Forge, which allows me to create plugins and mods for minecraft. I also know how to create applications, and lately I'm also learning about Sockets in Java, to be able to create servers.</p>
     </div>
+
+    <div id="logo">
+        <img src="images/logo.png" alt="">
+    </div>
+</div>
+
+<h1 class="separator">Partners</h1>
+<div id="partners">
+    <img src="images/KineticHosting.png" alt="">
 </div>
 </body>
 </html>
