Image is now clickable

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 
 <h1 class="separator">Partners</h1>
 <div id="partners">
-    <img src="images/KineticHosting.png" alt="">
+    <a href="https://billing.kinetichosting.net/aff.php?aff=327">
+        <img src="images/KineticHosting.png" alt="">
+    </a>
 </div>
 </body>
 </html>
