--- a/index.html
+++ b/index.html
@@ -97,5 +97,12 @@
         <img src="images/KineticHosting.png" alt="">
     </a>
 </div>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8458754434459912"
+     data-ad-slot="7800365443"></ins>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </body>
 </html>
