Add TonimatasDEV Studios information

--- a/index.html
+++ b/index.html
@@ -80,14 +80,26 @@
 </div>
 
 <h1 class="separator">About Me</h1>
-<div id="information">
-    <div id="description">
+<div class="information">
+    <div class="description">
        <h1>Description</h1>
        <p>My name is Toni, I'm a Java programmer, I know how to use the Bukkit/Spigot/Paper library and a part of Forge, which allows me to create plugins and mods for minecraft. I also know how to create applications, and lately I'm also learning about Sockets in Java, to be able to create servers.</p>
     </div>
 
-    <div id="logo">
+    <div class="logo">
         <img src="images/logo.png" alt="">
+    </div>
+</div>
+
+<h1 class="separator">About TonimatasDEV Studios</h1>
+<div class="information">
+    <div class="logo">
+        <img src="images/TonimatasDEVStudios.png" alt="">
+    </div>
+
+    <div class="description">
+        <h1>Description</h1>
+        <p>TonimatasDEV Studios is the name I have given to my discord community (https://dc.tonimatas.dev), that's where you can make suggestions and report bugs/glitches, here is where the support is faster and where suggestions are heard more. There are also two chats to communicate, one in spanish and one in english where you can ask me whatever you want.</p>
     </div>
 </div>
 
