--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 
     <div class="description">
         <h1>Description</h1>
-        <p>TonimatasDEV Studios is the name I have given to my discord community (https://dc.tonimatas.dev), that's where you can make suggestions and report bugs/glitches, here is where the support is faster and where suggestions are heard more. There are also two chats to communicate, one in spanish and one in english where you can ask me whatever you want.</p>
+        <p>TonimatasDEV Studios is the name I have given to my <a href="https://dc.tonimatas.dev">Discord</a> community). That's where you can make suggestions and report bugs/glitches, here is where the support is faster and where suggestions are heard more. There are also two chats to communicate, one in spanish and one in english where you can ask me whatever you want.
+        </p>
     </div>
 </div>
 
