--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="images/x-icon" href="images/icon.ico">
 
+    <link rel="stylesheet" href="common/style.css">
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8458754434459912" crossorigin="anonymous"></script>
 </head>
