--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
         <a href="https://www.curseforge.com/minecraft/mc-mods/krystalcraft">
             <div class="project">
                 <h1>KrystalCraft</h1>
-                <p>Make your mining more complex</p>
+                <p>Make your mining experience more complex</p>
             </div>
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/packet-size-doubler-forge">
             <div class="project">
-                <h1>Packet Size Doubler</h1>
-                <p>A simple mod for doubling the size of allowed packets</p>
+                <h1>PacketFixer </h1>
+                <p>Fixes lots of issues with packets. The most important ones are related with JEI/REI/NEI while trying to open a recipe that sends lots of packets (like the create ones) </p>
             </div>
         </a>
 
         <a href="https://www.curseforge.com/minecraft/mc-mods/potiontimestacker-forge">
             <div class="project">
-                <h1>PotionTimeStacker</h1>
-                <p>Stack the time when drink the same potion.</p>
+                <h1>Time Stacker</h1>
+                <p>Adds the time of the drunk potion to your current time potion effect .</p>
             </div>
         </a>
     </div>
@@ -73,7 +73,7 @@
         <a href="https://www.curseforge.com/minecraft/bukkit-plugins/instakillmobs">
             <div class="project">
                 <h1>InstaKillMobs</h1>
-                <p>Insta kill mobs with hand. /instakillmobs (gamemode) (enable/disable)</p>
+                <p>Instantaneously kill mobs with a hit. It works with this command: /instakillmobs (gamemode) (enable/disable)</p>
             </div>
         </a>
     </div>
@@ -83,7 +83,8 @@
 <div class="information">
     <div class="description">
        <h1>Description</h1>
-       <p>My name is Toni, I'm a Java programmer, I know how to use the Bukkit/Spigot/Paper library and a part of Forge, which allows me to create plugins and mods for minecraft. I also know how to create applications, and lately I'm also learning about Sockets in Java, to be able to create servers.</p>
+       <p>My name is Toni, I'm a Java programmer focused on modifying Minecraft. I love create plugins and mods in the most famous Minecraft libraries for modding like Forge/Fabric or architectury (makes possible to create a mod for bot loaders) and Bukkit/Spigot/Paper for plug-ins. <br>
+          I also can develop applications for general use. I've started to learn about Sockets in Java to start some server-client projects and to improve my application development.</p>
     </div>
 
     <div class="logo">
@@ -99,7 +100,7 @@
 
     <div class="description">
         <h1>Description</h1>
-        <p>TonimatasDEV Studios is the name I have given to my <a href="https://dc.tonimatas.dev">Discord</a> community). That's where you can make suggestions and report bugs/glitches, here is where the support is faster and where suggestions are heard more. There are also two chats to communicate, one in spanish and one in english where you can ask me whatever you want.
+        <p>TonimatasDEV Studios is the name I have given to my <a href="https://dc.tonimatas.dev">Discord</a> community). Here's where you can make suggestions and report bugs/glitches. The support is one of the fastest ever on communities and our feedback is really appreciated. There are also two general chats to communicate publicly for everyone; one in Spanish (my native language) and the other one in English, where you can ask me whatever you want in any channel.
         </p>
     </div>
 </div>
