Fix some other messages and update links

--- a/index.html
+++ b/index.html
@@ -29,48 +29,48 @@
 <h1 id="firstSeparator">My Projects</h1>
 <div id="projects">
     <div class="column">
-        <h1 class="columnName">Mods (Forge)</h1>
+        <h1 class="columnName">Mods (Forge/Fabric)</h1>
 
-        <a href="https://www.curseforge.com/minecraft/mc-mods/krystalcraft">
+        <a href="https://modrinth.com/mod/krystalcraft">
             <div class="project">
                 <h1>KrystalCraft</h1>
-                <p>Make your mining experience more complex</p>
+                <p>Make your mining experience more complex!</p>
             </div>
         </a>
 
-        <a href="https://www.curseforge.com/minecraft/mc-mods/packet-size-doubler-forge">
+        <a href="https://modrinth.com/mod/packet-fixer">
             <div class="project">
-                <h1>PacketFixer </h1>
-                <p>Fixes lots of issues with packets. The most important ones are related with JEI/REI/NEI while trying to open a recipe that sends lots of packets (like the create ones) </p>
+                <h1>Packet Fixer</h1>
+                <p>It fixes lots of issues with packets and NBTs.</p>
             </div>
         </a>
 
-        <a href="https://www.curseforge.com/minecraft/mc-mods/potiontimestacker-forge">
+        <a href="https://modrinth.com/mod/timestacker">
             <div class="project">
                 <h1>Time Stacker</h1>
-                <p>Adds the time of the drunk potion to your current time potion effect .</p>
+                <p>It adds the time of the potion applied to your current time potion effect.</p>
             </div>
         </a>
     </div>
 
     <div class="column">
-        <h1 class="columnName">Plugins</h1>
+        <h1 class="columnName">Plugins (Bukkit/Spigot/Paper)</h1>
 
-        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/perworldplugins-updated">
+        <a href="https://modrinth.com/plugin/perworldplugins">
             <div class="project">
                 <h1>PerWorldPlugins</h1>
                 <p>PerWorldPlugins allows plugins to be set to hook onto certain worlds using the config.</p>
             </div>
         </a>
 
-        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/perworldcommandsplus">
+        <a href="https://modrinth.com/plugin/perworldcommands">
             <div class="project">
                 <h1>PerWorldCommands</h1>
-                <p>Put commands for certain worlds.</p>
+                <p>Allows commands for certain worlds.</p>
             </div>
         </a>
 
-        <a href="https://www.curseforge.com/minecraft/bukkit-plugins/instakillmobs">
+        <a href="https://modrinth.com/plugin/instakillmobs">
             <div class="project">
                 <h1>InstaKillMobs</h1>
                 <p>Instantaneously kill mobs with a hit. It works with this command: /instakillmobs (gamemode) (enable/disable)</p>
@@ -83,8 +83,8 @@
 <div class="information">
     <div class="description">
        <h1>Description</h1>
-       <p>My name is Toni, I'm a Java programmer focused on modifying Minecraft. I love create plugins and mods in the most famous Minecraft libraries for modding like Forge/Fabric or architectury (makes possible to create a mod for bot loaders) and Bukkit/Spigot/Paper for plug-ins. <br>
-          I also can develop applications for general use. I've started to learn about Sockets in Java to start some server-client projects and to improve my application development.</p>
+       <p>My name is Toni, I'm a Java programmer focused on modifying Minecraft. I love create plugins and mods in the most famous Minecraft libraries for modding like Forge/Fabric or architectury (makes possible to create a mod for both loaders) and Bukkit/Spigot/Paper for plugins.<br>
+          I also can develop applications for general use. I've started to learn about Sockets in Java to start some client-server projects and to improve my application development.</p>
     </div>
 
     <div class="logo">
@@ -100,7 +100,9 @@
 
     <div class="description">
         <h1>Description</h1>
-        <p>TonimatasDEV Studios is the name I have given to my <a href="https://dc.tonimatas.dev">Discord</a> community). Here's where you can make suggestions and report bugs/glitches. The support is one of the fastest ever on communities and our feedback is really appreciated. There are also two general chats to communicate publicly for everyone; one in Spanish (my native language) and the other one in English, where you can ask me whatever you want in any channel.
+        <p>TonimatasDEV Studios is the name I have given to my <a href="https://dc.tonimatas.dev">Discord</a> community). Here's where you can make suggestions and report bugs/glitches.
+            The support is one of the fastest ever on communities and our feedback is really appreciated.
+            There are also two general chats to communicate publicly for everyone; one in Spanish (my native language) and the other one in English, where you can ask me whatever you want in any channel.
         </p>
     </div>
 </div>
